# marcos_silva_embarcatech_HBr_2025

./: .gitmodules  LICENSE  README.md
projects/balancing_robot/: README.md
projects/code_structuring/src/: CMakeLists.txt
projects/code_structuring/src/app/: main.c
projects/code_structuring/src/drivers/: led_embutido.c
projects/code_structuring/src/hal/: hal_led.c
projects/code_structuring/src/include/: hal_led.h  led_embutido.h
projects/countdown_counter/src/: CMakeLists.txt  src.c
projects/countdown_counter/src/inc/: ssd1306.h
projects/galton_board/: a.out  main.c
projects/galton_board/src/: CMakeLists.txt
projects/galton_board/src/apps/: main.c
projects/galton_board/src/drivers/: ssd1306_i2c.c
projects/galton_board/src/include/: aux.c  aux.h  ssd1306_i2c.h
projects/iot_security/src/: CMakeLists.txt
projects/iot_security/src/apps/: cryptography.c  main.c
projects/iot_security/src/include/: cryptography.h  init_hardware.c  (+7 more)
projects/joystick_reading/src/: src.c
projects/rtos_demo/: CMakeLists.txt  README.md
projects/rtos_demo/include/: init_hardware.h
projects/rtos_demo/rtos_demo/: .gitignore  CMakeLists.txt  README.md  main.c  requirements.txt
projects/rtos_demo/src/: init_hardware.c
projects/sound_synthesizer/: CMakeLists.txt  README.md  main.c
projects/sound_synthesizer/include/: init_hardware.h
projects/sound_synthesizer/src/: init_hardware.c
projects/temperature_monitoring/src/: CMakeLists.txt  src.c
projects/unit_test/src/: CMakeLists.txt  src.c
projects/unit_test/src/tests/: CMakeLists.txt  test_adc_to_celsius.c
(+5 files in other folders)
